[package]
name = "merkledb"
version = "0.1.1"
edition = "2021"
authors = [
    "The Exonum Team <contact@exonum.com>",
    "The Trinci Team <info@affidaty.io>",
]
homepage = "https://exonum.com/"
repository = "https://github.com/affidaty-blockchain/merkledb"
documentation = "https://docs.rs/exonum-merkledb"
readme = "README.md"
license = "Apache-2.0"

keywords = ["cryptography", "database", "merkelize", "patricia"]
categories = ["cryptography", "database", "data-structures"]
description = "Persistent storage implementation based on RocksDB which provides APIs to work with Merkelized data structures."

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
chrono = "0.4"
crossbeam = "0.8.0"
enum-primitive-derive = "0.2"
leb128 = "0.2"
num-traits = "0.2"
rocksdb = { version = "0.18.0", default-features = false }
rust_decimal = "1.0"
serde = "1.0"
serde_derive = "1.0"
smallvec = "1.6"
tempfile = "3.2"
thiserror = "1.0"
uuid = { version = "1.1.2", features = ["v4"] }
hex = "0.4.2"
sodiumoxide = { version = "0.2.7", optional = true }

[dev-dependencies]
merkledb-derive = { path = "components/derive" }
assert_matches = "1.3"
bincode = "1.3"
criterion = "0.3"
hex = "0.4.0"
modifier = "0.1"
proptest = "1.0"
pretty_assertions = "1.0.0"
rand = "0.8"
rand_xorshift = "0.3.0"
serde_json = "1.0"
url = "2.0"

[[bench]]
name = "criterion"
path = "benches/lib.rs"
harness = false

[features]
default = ["rocksdb_snappy", "sodiumoxide-crypto"]
sodiumoxide-crypto = ["sodiumoxide"]
with-serde = []

# Compression options passed to RocksDB backend.
rocksdb_snappy = ["rocksdb/snappy"]
rocksdb_lz4 = ["rocksdb/lz4"]
rocksdb_zlib = ["rocksdb/zlib"]
rocksdb_zstd = ["rocksdb/zstd"]
rocksdb_bzip2 = ["rocksdb/bzip2"]

# Enables long benchmarks; does not influence main crate code.
long_benchmarks = []
# Enables `unsafe` optimizations / experimental features.
# Strongly discouraged for use in production.
yolo = []
