[package]
name = "merkledb-crypto"
version = "0.1.0"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>", "The Trinci Team <info@trinci.io>"]
homepage = "https://trinci.io"
repository = "https://github.com/affidaty-blockchain/merkledb"
documentation = "https://docs.rs/exonum-crypto"
readme = "README.md"
license = "Apache-2.0"
keywords = ["merkledb", "cryptography", "hashing", "library"]
categories = ["algorithms", "cryptography"]
description = "Cryptography related types, constants, traits and functions used by MerkleDB project."

[dependencies]
anyhow = "1.0.26"
hex = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
sodiumoxide = { version = "0.2.7", optional = true }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.2"

[features]
default = ["sodiumoxide-crypto", "with-serde"]
sodiumoxide-crypto = ["sodiumoxide"]
with-serde = []
