[package]
name = "merkledb-derive"
version = "0.1.0"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>", "The Trinci Team <info@trinci.io>"]
homepage = "https://trinci.io"
repository = "https://github.com/affidaty-blockchain/merkledb"
documentation = "https://docs.rs/exonum-derive"
readme = "README.md"
license = "Apache-2.0"
keywords = ["merkledb"]
categories = ["development-tools"]
description = "Procedural macros for MerkleDB project."

[lib]
proc-macro = true

[dependencies]
darling = "0.12.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
semver = "0.10"
